# student-services-assistant-accelerator

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  azure.yaml  pyproject.toml  requirements.txt
.azure/: deployment-plan.md
.github/workflows/: ci.yml
data/knowledge/: financial-aid.md  housing.md  registration.md
docs/: azure-deployment-guide.md
evals/: README.md  student-services.jsonl
infra/: main.bicep  main.parameters.json
scripts/: __init__.py  customize.py  ingest.py  website_source.py
src/api/: Dockerfile
src/api/app/: __init__.py  agent.py  config.py  main.py  retrieval.py  safety.py  schemas.py  service.py
src/api/app/static/: app.js  index.html  styles.css
tests/: test_api.py  test_safety.py  test_service.py  test_website_source.py
