[build-system]
requires = ["hatchling>=1.27"]
build-backend = "hatchling.build"

[project]
name = "student-services-assistant"
version = "0.1.0"
description = "Microsoft Foundry and Azure AI Search accelerator for higher-education student services."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "agent-framework-core>=1.0.0b260212",
  "agent-framework-foundry>=1.0.0",
  "azure-identity>=1.19.0",
  "azure-monitor-opentelemetry>=1.6.0",
  "azure-search-documents>=11.6.0",
  "fastapi>=0.115.0,<1.0",
  "openai>=2.15.0,<3.0",
  "pydantic-settings>=2.7.0,<3.0",
  "uvicorn[standard]>=0.34.0,<1.0",
]

[project.optional-dependencies]
dev = [
  "httpx>=0.28.0,<1.0",
  "mypy>=1.14.0,<2.0",
  "pytest>=8.3.0,<9.0",
  "pytest-asyncio>=0.25.0,<1.0",
  "ruff>=0.9.0,<1.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/api/app"]

[tool.pytest.ini_options]
addopts = "-q"
asyncio_mode = "auto"
pythonpath = ["src/api"]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.11"
strict = true
packages = ["app"]
mypy_path = "src/api"
